added header and banner section with responsive version

--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/47c063a947.js" crossorigin="anonymous"></script>
     <title>Travel Buddies</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <header>
+        <nav>
+            <div id="icon">
+                <img src="./Images/Group 40071 (2).png" alt="">
+                <h1>Travel <span>Buddies</span></h1>
+            </div>
+            <div id="nav-container">
+                <li>Home</li>
+                <li>Packages</li>
+                <li>Testimonial</li>
+                <li>Blog</li>
+                <li>Contact</li>
+                <i class="fa-solid fa-bars fa-xl"></i>
+            </div>
+        </nav>
+        <section id="banner-container">
+            <h1>Explore Your Travel</h1>
+            <p>Let the rhythm of your heart guide your feet, as you explore the world's boundless beauty with
+                wonder-filled eyes and an open mind.</p>
+            <div id="select-container">
+                <input type="text" placeholder="Where to">
+                <select value="Where" name="" id="">
+                    <option value="" selected hidden>When</option>
+                </select>
+                <select value="Where" name="" id="">
+                    <option value="" selected hidden>Select type</option>
+                </select>
+                <button>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    Find Now
+                </button>
+            </div>
+        </section>
+    </header>
     
 </body>
+
 </html>
