added popular section with responsive version

--- a/index.html
+++ b/index.html
@@ -44,7 +44,28 @@
             </div>
         </section>
     </header>
-    
+    <main>
+        <section id="popular-container">
+            <div id="popular-container-left">
+                <h1>Our Popular Tours</h1>
+                <p>Adventure awaits beyond every horizon, beckoning us to explore, discover, and embrace the world's
+                    infinite wonders.</p>
+                <ul>
+                    <li>Traveling—it leaves you speechless, then turns you into a storyteller, weaving tales of
+                        cultures, landscapes, and unforgettable encounters." - Ibn Battuta</li>
+                    <li>The world is a book, and those who do not travel read only one page, missing out on the
+                        countless chapters of diverse experiences, perspectives, and adventures." - Saint Augustine</li>
+                    <li>To travel is to take a journey into yourself, discovering hidden passions, overcoming fears, and forging connections with the world and its people that shape who you are." - Danny Kaye</li>
+                </ul>
+                <p>Through the lens of exploration, we find not only new destinations but also the true essence of
+                    ourselves, woven into the fabric of each unforgettable experience.</p>
+                <button>Read More</button>
+            </div>
+            <div id="popular-container-right">
+                <img src="./Images/Rectangle 4.png" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
