--- a/index.html
+++ b/index.html
@@ -47,22 +47,64 @@
     <main>
         <section id="popular-container">
             <div id="popular-container-left">
-                <h1>Our Popular Tours</h1>
-                <p>Adventure awaits beyond every horizon, beckoning us to explore, discover, and embrace the world's
+                <h1 class="section-heading">Our Popular Tours</h1>
+                <p class="section-para">Adventure awaits beyond every horizon, beckoning us to explore, discover, and embrace the world's
                     infinite wonders.</p>
                 <ul>
                     <li>Traveling—it leaves you speechless, then turns you into a storyteller, weaving tales of
                         cultures, landscapes, and unforgettable encounters." - Ibn Battuta</li>
                     <li>The world is a book, and those who do not travel read only one page, missing out on the
                         countless chapters of diverse experiences, perspectives, and adventures." - Saint Augustine</li>
-                    <li>To travel is to take a journey into yourself, discovering hidden passions, overcoming fears, and forging connections with the world and its people that shape who you are." - Danny Kaye</li>
+                    <li>To travel is to take a journey into yourself, discovering hidden passions, overcoming fears, and
+                        forging connections with the world and its people that shape who you are." - Danny Kaye</li>
                 </ul>
-                <p>Through the lens of exploration, we find not only new destinations but also the true essence of
+                <p class="section-para">Through the lens of exploration, we find not only new destinations but also the true essence of
                     ourselves, woven into the fabric of each unforgettable experience.</p>
                 <button>Read More</button>
             </div>
             <div id="popular-container-right">
                 <img src="./Images/Rectangle 4.png" alt="">
+            </div>
+        </section>
+        <section id="destination-container">
+            <h1 class="section-heading">Choose Your Destination</h1>
+            <p class="section-para">Celebrate the journey as much as the destination; for in each step lies the promise of adventure and
+                discovery.</p>
+            <div id="destination-img-container">
+                <div class="destination-img">
+                    <div class="d-img">
+                        <p>Maldives</p>
+                        <img src="./Images/Rectangle 5.png" alt="">
+                    </div>
+                    <div class="d-img">
+                        <p>Indonesia</p>
+                        <img src="./Images/Rectangle 8.png" alt="">
+                    </div>
+                </div>
+                <div class="destination-img">
+                    <div class="d-img">
+                        <p>Srilanka</p>
+                        <img src="./Images/Rectangle 6.png" alt="">
+                    </div>
+                    <div class="d-img">
+                        <p>North America</p>
+                        <img src="./Images/Rectangle 7.png" alt="">
+                    </div>
+                    <div class="d-img">
+                        <p>Kashmir</p>
+                        <img src="./Images/Rectangle 9.png" alt="">
+                    </div>
+                </div>
+                <div class="destination-img">
+                    <div class="d-img">
+                        <p>Bangladesh</p>
+                        <img src="./Images/Rectangle 11.png" alt="">
+                    </div>
+                    <div class="d-img">
+                        <p>Bandarban</p>
+                        <img src="./Images/Rectangle 10.png" alt="">
+                    </div>
+                </div>
             </div>
         </section>
     </main>
