added why choose us section with responsive version

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <section id="popular-container">
             <div id="popular-container-left">
                 <h1 class="section-heading">Our Popular Tours</h1>
-                <p class="section-para">Adventure awaits beyond every horizon, beckoning us to explore, discover, and embrace the world's
+                <p class="section-para">Adventure awaits beyond every horizon, beckoning us to explore, discover, and
+                    embrace the world's
                     infinite wonders.</p>
                 <ul>
                     <li>Traveling—it leaves you speechless, then turns you into a storyteller, weaving tales of
@@ -58,7 +59,8 @@
                     <li>To travel is to take a journey into yourself, discovering hidden passions, overcoming fears, and
                         forging connections with the world and its people that shape who you are." - Danny Kaye</li>
                 </ul>
-                <p class="section-para">Through the lens of exploration, we find not only new destinations but also the true essence of
+                <p class="section-para">Through the lens of exploration, we find not only new destinations but also the
+                    true essence of
                     ourselves, woven into the fabric of each unforgettable experience.</p>
                 <button>Read More</button>
             </div>
@@ -68,7 +70,8 @@
         </section>
         <section id="destination-container">
             <h1 class="section-heading">Choose Your Destination</h1>
-            <p class="section-para">Celebrate the journey as much as the destination; for in each step lies the promise of adventure and
+            <p class="section-para">Celebrate the journey as much as the destination; for in each step lies the promise
+                of adventure and
                 discovery.</p>
             <div id="destination-img-container">
                 <div class="destination-img">
@@ -103,6 +106,31 @@
                     <div class="d-img">
                         <p>Bandarban</p>
                         <img src="./Images/Rectangle 10.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="choose-container">
+            <h1 class="section-heading">Why Choose US</h1>
+            <p class="section-para">Travel is a transformative journey that enriches the soul, broadens the mind, and fills the heart with unforgettable experiences and stories waiting to be shared.</p>
+            <div id="choose-card-container">
+                <div class="row row-1">
+                    <div class="choose-card choose-card-1">
+                        <img src="./Images/hotel 1.svg" alt="">
+                        <h3>Handpicked Hotels</h3>
+                        <p>Between vacations, many daydream about what adventures the next trip holds. You can spend your days switching back and forth from looking at your favorite travel photos to trying to go about your day to day life</p>
+                    </div>
+                    <div class="choose-card choose-card-2">
+                        <img src="./Images/map 1.png" alt="">
+                        <h3>World Class Service</h3>
+                        <p>Between vacations, many daydream about what adventures the next trip holds. You can spend your days switching back and forth from looking at your favorite travel photos to trying to go about your day to day life</p>
+                    </div>
+                </div>
+                <div class="row row-2">
+                    <div class="choose-card choose-card-3">
+                        <img src="./Images/price-tag 1.png" alt="">
+                        <h3>Best Price Gaurantee</h3>
+                        <p>Between vacations, many daydream about what adventures the next trip holds. You can spend your days switching back and forth from looking at your favorite travel photos to trying to go about your day to day life</p>
                     </div>
                 </div>
             </div>
