added deals and discount section

--- a/index.html
+++ b/index.html
@@ -112,28 +112,114 @@
         </section>
         <section id="choose-container">
             <h1 class="section-heading">Why Choose US</h1>
-            <p class="section-para">Travel is a transformative journey that enriches the soul, broadens the mind, and fills the heart with unforgettable experiences and stories waiting to be shared.</p>
+            <p class="section-para">Travel is a transformative journey that enriches the soul, broadens the mind, and
+                fills the heart with unforgettable experiences and stories waiting to be shared.</p>
             <div id="choose-card-container">
                 <div class="row row-1">
                     <div class="choose-card choose-card-1">
                         <img src="./Images/hotel 1.svg" alt="">
                         <h3>Handpicked Hotels</h3>
-                        <p>Between vacations, many daydream about what adventures the next trip holds. You can spend your days switching back and forth from looking at your favorite travel photos to trying to go about your day to day life</p>
+                        <p>Between vacations, many daydream about what adventures the next trip holds. You can spend
+                            your days switching back and forth from looking at your favorite travel photos to trying to
+                            go about your day to day life</p>
                     </div>
                     <div class="choose-card choose-card-2">
                         <img src="./Images/map 1.png" alt="">
                         <h3>World Class Service</h3>
-                        <p>Between vacations, many daydream about what adventures the next trip holds. You can spend your days switching back and forth from looking at your favorite travel photos to trying to go about your day to day life</p>
+                        <p>Between vacations, many daydream about what adventures the next trip holds. You can spend
+                            your days switching back and forth from looking at your favorite travel photos to trying to
+                            go about your day to day life</p>
                     </div>
                 </div>
                 <div class="row row-2">
                     <div class="choose-card choose-card-3">
                         <img src="./Images/price-tag 1.png" alt="">
                         <h3>Best Price Gaurantee</h3>
-                        <p>Between vacations, many daydream about what adventures the next trip holds. You can spend your days switching back and forth from looking at your favorite travel photos to trying to go about your day to day life</p>
+                        <p>Between vacations, many daydream about what adventures the next trip holds. You can spend
+                            your days switching back and forth from looking at your favorite travel photos to trying to
+                            go about your day to day life</p>
                     </div>
                 </div>
             </div>
+        </section>
+        <!-- Discount Section -->
+        <section class="discount-container">
+            <h1 class="section-heading">Deal & Discounts</h1>
+            <p class="section-para">Do not compromise on the quality and your customers will not negotiate on the price.
+                The emptiness of your pocket is not a recipe for you to discount the value of your passion!
+            </p>
+            <div class="discount-card-container">
+                <div class="discount-card discount-card-1">
+                    <div class="inner-discount-card inner-1">
+                        <div class="day-info">
+                            <img src="./Images/Frame.png" alt="">
+                            <p>7 Day / 6 Night</p>
+                        </div>
+                        <div class="location">
+                            <div>
+                                <img src="./Images/Frame1.png" alt="">
+                                <p>Max: 10</p>
+                            </div>
+                            <div>
+                                <img src="./Images/Frame2.png" alt="">
+                                <p>Malaysia</p>
+                            </div>
+                        </div>
+                        <h3 class="inner-card-heading">Deluxe Room</h3>
+                        <p class="inner-card-para">When you get into a hotel room, you lock the door, and you know there
+                            is a secrecy, there is a luxury, there is fantasy.</p>
+                        <p id="price">Price: $1300-$1500</p>
+                        <button>Book Now</button>
+                    </div>
+                </div>
+                <div class="discount-card discount-card-2">
+                    <div class="inner-discount-card inner-2">
+                        <div class="day-info">
+                            <img src="./Images/Frame.png" alt="">
+                            <p>7 Day / 6 Night</p>
+                        </div>
+                        <div class="location">
+                            <div>
+                                <img src="./Images/Frame1.png" alt="">
+                                <p>Max: 10</p>
+                            </div>
+                            <div>
+                                <img src="./Images/Frame2.png" alt="">
+                                <p>Malaysia</p>
+                            </div>
+                        </div>
+                        <h3 class="inner-card-heading">Deluxe Room</h3>
+                        <p class="inner-card-para">When you get into a hotel room, you lock the door, and you know there
+                            is a secrecy, there is a luxury, there is fantasy.</p>
+                        <p id="price">Price: $1300-$1500</p>
+                        <button>Book Now</button>
+                    </div>
+                </div>
+                <div class="discount-card discount-card-3">
+                    <div class="inner-discount-card inner-3">
+                        <div class="day-info">
+                            <img src="./Images/Frame.png" alt="">
+                            <p>7 Day / 6 Night</p>
+                        </div>
+                        <div class="location">
+                            <div>
+                                <img src="./Images/Frame1.png" alt="">
+                                <p>Max: 10</p>
+                            </div>
+                            <div>
+                                <img src="./Images/Frame2.png" alt="">
+                                <p>Malaysia</p>
+                            </div>
+                        </div>
+                        <h3 class="inner-card-heading">Deluxe Room</h3>
+                        <p class="inner-card-para">When you get into a hotel room, you lock the door, and you know there
+                            is a secrecy, there is a luxury, there is fantasy.</p>
+                        <p id="price">Price: $1300-$1500</p>
+                        <button>Book Now</button>
+                    </div>
+                </div>
+            </div>
+            <button class="btn-package">See All Packages</button>
         </section>
     </main>
 </body>
