added newsletter section

--- a/index.html
+++ b/index.html
@@ -288,6 +288,27 @@
           <img src="./Images/Group 40089.png" alt="" />
         </div>
       </section>
+      <section class="newsletter-container">
+        <div class="newletter-left">
+          <h1 class="section-heading">Newsletter</h1>
+          <p class="section-para">
+            Get your daily dose of travel news & tips. Sign up today!
+          </p>
+          <hr />
+          <form>
+            <input type="text" placeholder="Enter your name" />
+            <input type="email" placeholder="Enter you email" />
+          </form>
+          <button class="btn-subcribe">Subscribe</button>
+        </div>
+        <div class="newsletter-right">
+          <img src="./Images/Rectangle 8 (1).png" alt="" />
+          <div class="newsletter-discount">
+            <p>Travel.com</p>
+            <h3>Save up to 70%</h3>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
