--- a/index.html
+++ b/index.html
@@ -310,5 +310,23 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div id="icon">
+        <img src="./Images/Group 40071 (2).png" alt="" />
+        <h1>Travel <span>Buddies</span></h1>
+      </div>
+      <p class="section-para">
+        Life is a journey, not a destination. Travel often, explore endlessly,
+        and cherish every moment along the way.
+      </p>
+      <div class="social-icon">
+        <i class="fa-brands fa-twitter fa-xl"></i>
+        <i class="fa-brands fa-facebook-f fa-xl"></i>
+        <i class="fa-brands fa-instagram fa-xl"></i>
+        <i class="fa-brands fa-github fa-xl"></i>
+      </div>
+      <hr />
+      <p class="copywrite">2017, All Rights Reserved.</p>
+    </footer>
   </body>
 </html>
