added extra section

--- a/index.html
+++ b/index.html
@@ -264,6 +264,14 @@
         </div>
         <button class="btn-package">See All Packages</button>
       </section>
+      <section class="extra-container">
+        <h1 class="section-heading">Big spring savings: Save 25% or more</h1>
+        <p class="section-para">
+          Take a trip over the school holidays. Enjoy 25% off with One Key
+          Member Prices on select hotels. Book by March 25.
+        </p>
+        <button class="btn-extra-section">Unlock Spring Deals</button>
+      </section>
       <section class="place-container">
         <div>
           <h1 class="section-heading">A Simple Perfect Place To Get Lost</h1>
